[FEAT] - GitHub APP API Integration
 - added proper duplicate issue handling